--- a/mweb.html
+++ b/mweb.html
@@ -1,261 +1,142 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:700,300' rel='stylesheet' type='text/css'>
+	<style>
+		body {
+			background-color: #FFFFFF;
+			margin: 0;
+		}
+		/* Elements */
+		.card {
+			background-color: #FCFCFC;
+			width: 830px;
+			/* Natali check this */
+			display: flex;
+			display: -webkit-flex;
+			display: -ms-flex;
+			display: -moz-flex;
+			flex-direction: row;
+			-webkit-flex-direction: row;
+			-ms-flex-direction: row;
+			-moz-flex-direction: row;
+		}
+		#main-image {
+			width: 360px;
+			/* We should pick a "standard" nice round size for this. 521px seems arbitrary */
+			height: 360px;
+			/* ditto */
+			background-size: cover;
+			background-position: center;
+			background-image: url(https://is4-ssl.mzstatic.com/image/thumb/Purple123/v4/ac/b8/cf/acb8cf56-26f6-fbce-698a-019643b0a3a4/AppIcon-0-1x_U007emarketing-0-0-GLES2_U002c0-512MB-sRGB-0-0-0-85-220-0-0-0-7.png/1024x1024bb.png);
+		}
+		#content-container {
+			position: relative;
+			float: right;
+			flex: 1;
+			-webkit-flex: 1;
+			-ms-flex: 1;
+			-moz-flex: 1;
+			padding: 24px;
+		}
+		.app-title {
+			font-size: 14px;
+			line-height: 19px;
+			padding-bottom: 20px;
+			border-bottom-width: 3px;
+			border-bottom-style: solid;
+			border-bottom-color: #CECECE;
+			text-transform: uppercase;
+		}
+		.card-title {
+			padding-top: 20px;
+			font-size: 32px;
+			line-height: 32px;
+		}
+		.app-content {
+			padding-top: 16px;
+		}
+		.input-container {
+			position: absolute;
+			bottom: 10px;
+			left: 24px;
+			right: 24px;
+		}
+		form>input {
+			margin-right: 10px;
+			padding-top: 10px;
+			padding-bottom: 10px;
+			flex: 1;
+			-webkit-flex: 1;
+			-ms-flex: 1;
+			-moz-flex: 1;
+			background-color: #FFFFFF;
+			border: 1px solid #979797;
+			border-radius: 2px;
+			font-size: 18px;
+			color: #444444;
+			line-height: 24px;
+			padding-left: 20px;
+		}
+		button {
+			background-color: #444444;
+			border: 1px solid #444444;
+			border-radius: 2px;
+			font-size: 20px;
+			color: #FFFFFF;
+			line-height: 27px;
+			cursor: pointer;
+		}
+		.input-container>form {
+			flex-direction: row;
+			-webkit-flex-direction: row;
+			-moz-flex-direction: row;
+			-ms-flex-direction: row;
+			display: -webkit-flex;
+			display: -moz-flex;
+			display: -ms-flex;
+			display: flex;
+		}
+		.input-label {
+			padding-bottom: 10px;
+		}
+		/* Reusables */
+		.center {
+			transform: translate(-50%, -50%);
+			-webkit-transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			-moz-transform: translate(-50%, -50%);
+			top: 50%;
+			left: 50%;
+			position: fixed;
+		}
+		.bold {
+			font-family: 'Open Sans', Helvetica, serif;
+			font-weight: 700
+		}
+		.light {
+			font-family: 'Open Sans', Helvetica, serif;
+			font-weight: 300;
+		}
+		.error {
+			color: #FF7878;
+		}
+	</style>
 	<script>
 	(function(b,r,a,n,c,h,_,s,d,k){if(!b[n]||!b[n]._q){for(;s<_.length;)c(h,_[s++]);d=r.createElement(a);d.async=1;d.src="https://cdn.branch.io/branch-latest.min.js";k=r.getElementsByTagName(a)[0];k.parentNode.insertBefore(d,k);b[n]=h}})(window,document,"script","branch",function(b,r){b[r]=function(){b._q.push([r,arguments])}},{_q:[],_v:1},"addListener applyCode autoAppIndex banner closeBanner closeJourney creditHistory credits data deepview deepviewCta first getCode init link logout redeem referrals removeListener sendSMS setBranchViewData setIdentity track validateCode trackCommerceEvent logEvent disableTracking".split(" "), 0);
 	branch.init('key_live_lmJDv2hI9NuyiSzLNO3UVfmpCAk13Cbt');
 	</script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:700,300" rel="stylesheet" type="text/css">
-	<style>
-		body {
-			margin: 0;
-			word-wrap: break-word;
-		}
-		/* ============ Portrait ============ */
-		.main-image {
-			width: 100%;
-			height: 250px;
-			height: 75vw;
-			background-image: url(https://is4-ssl.mzstatic.com/image/thumb/Purple123/v4/ac/b8/cf/acb8cf56-26f6-fbce-698a-019643b0a3a4/AppIcon-0-1x_U007emarketing-0-0-GLES2_U002c0-512MB-sRGB-0-0-0-85-220-0-0-0-7.png/1024x1024bb.png);
-			background-size: cover;
-			background-position: top center;
-		}
-		#content-container {
-			box-sizing: border-box;
-			padding: 24px;
-			margin: 0 24px 0 24px;
-			background-color: #ffffff;
-		}
-		.app-title {
-			font-size: 14px;
-			padding-bottom: 11px;
-			text-transform: uppercase;
-		}
-		.card-title {
-			font-size: 33px;
-			line-height: 36px;
-		}
-		.app-content {
-			padding-top: 10px;
-			padding-bottom: 100px;
-			font-size: 20px;
-		}
-		.input-wrapper {
-			position: fixed;
-			bottom: 0;
-			left: 0;
-			width: 100%;
-			height: 110px;
-			background-color: white;
-			-webkit-box-shadow: 0px -20px 20px -8px rgba(255, 255, 255, 1);
-			-moz-box-shadow: 0px -20px 20px -8px rgba(255, 255, 255, 1);
-			box-shadow: 0px -20px 20px -8px rgba(255, 255, 255, 1);
-		}
-		.input-container {
-			width: 100%;
-			padding: 0 24px;
-			text-align: center;
-			-webkit-box-sizing: border-box;
-			-moz-box-sizing: border-box;
-			box-sizing: border-box;
-		}
-		.form-get-the-app {
-			text-align: center;
-			padding-top: 10px;
-			border-top: 2px solid #CECECE;
-		}
-		.form-get-the-app>input {
-			margin-right: 10px;
-			padding-top: 10px;
-			padding-bottom: 10px;
-			background-color: #FFFFFF;
-			border: 1px solid #979797;
-			border-radius: 2px;
-			font-size: 60px;
-			color: #CECECE;
-			line-height: 24px;
-			padding-left: 20px;
-		}
-		.input-label {
-			padding-bottom: 4px;
-			font-size: 13px;
-			padding-left: 10px;
-			padding-right: 10px;
-			overflow: hidden;
-			word-wrap: break-word;
-			padding-top: 4px;
-			text-align: center;
-		}
-		.app-icon {
-			content: ' ';
-			float: left;
-			display: inline-block;
-			width: 62px;
-			height: 62px;
-			line-height: 62px;
-			background-size: 100% auto;
-			background-image: url(https://play-lh.googleusercontent.com/Mo4DV_61Wy5LP_dpiC2LiH5Nq3a26bOqHDypJh5WmuQhtdj1LkrRTVs4LEg_0X4f=s200-rw);
-		}
-		.cta-button {
-			display: block;
-			height: 62px;
-			line-height: 62px;
-			background-color: #444444;
-			border-radius: 2px;
-			font-size: 20px;
-			padding: 0 20px;
-			margin-left: 70px;
-			color: #FFFFFF;
-			text-align: center;
-			text-decoration: none;
-		}
-		/* No data (portrait) */
-		@media only screen and (orientation: portrait) {
-			.card--no-data .main-image {
-				background-image: url('http://s3-us-west-1.amazonaws.com/branch-assets/b_stripes-small.png');
-				background-size: auto;
-				background-position: top center;
-				background-repeat: repeat;
-				height: 190px;
-			}
-			.card--no-data>.app-icon {
-				position: absolute;
-				top: 160px;
-				left: 34px;
-			}
-			.card--no-data #content-container {
-				margin-top: 20px;
-			}
-		}
-		@media screen
-		/* >= iPhone 5 */
-		and (min-device-width: 321px) {
-			.input-label {
-				font-size: 14px;
-			}
-		}
-		@media only screen
-		/* >= iPhone 6 */
-		and (min-device-width: 375px) and (orientation: portrait) {
-			.main-image {
-				height: 300px;
-				height: 80vw;
-			}
-			.app-content {
-				padding-bottom: 120px;
-			}
-			.input-wrapper {
-				height: 115px;
-			}
-		}
-		@media only screen
-		/* >= iPhone 6+ */
-		and (min-device-width: 414px) and (orientation: portrait) {
-			.main-image {
-				height: 390px;
-				height: 95vw;
-			}
-		}
-		/* ============ Landscape ============ */
-		@media only screen and (orientation: landscape) {
-			.main-image {
-				position: fixed;
-				height: 100%;
-				height: 100vh;
-				width: 50%;
-			}
-			.input-wrapper {
-				right: 0;
-				left: auto;
-				width: 50%;
-			}
-			#content-container {
-				float: left;
-				width: 50%;
-				margin-left: 50%;
-			}
-			.input-wrapper {
-				height: 108px;
-			}
-			.app-content {
-				padding-bottom: 110px;
-			}
-			.form-get-the-app {
-				padding-top: 8px;
-			}
-			.input-container {
-				left: 50%;
-			}
-			.cta-button {
-				height: 44px;
-				line-height: 44px;
-				padding: 0 5px;
-				margin-left: 50px;
-			}
-			.app-icon {
-				width: 44px;
-				height: 44px;
-			}
-			/* No data (landscape) */
-			.card--no-data .main-image {
-				height: 100%;
-			}
-			.card--no-data>.app-icon {
-				display: none;
-			}
-			.card--no-data #content-container {
-				margin-top: 0;
-			}
-		}
-		@media only screen
-		/* >= iPhone 6 */
-		and (min-device-width: 645px) and (orientation: landscape) {
-			.form-get-the-app {
-				padding-top: 8px;
-			}
-			.cta-button {
-				height: 62px;
-				line-height: 62px;
-				padding: 0 20px;
-				margin-left: 70px;
-			}
-			.app-icon {
-				width: 62px;
-				height: 62px;
-				top: -2px;
-			}
-		}
-		/* Reusables */
-		.text-bold {
-			font-family: 'Open Sans', Helvetica, serif;
-			font-weight: 700
-		}
-		.text-light {
-			font-family: 'Open Sans', Helvetica, serif;
-			font-weight: 300;
-		}
-		.cta-button--no-app-icon {
-			margin-left: 0;
-		}
-	</style>
 </head>
 <body>
 	<div class="card center">
-		<div class="main-image"></div>
-		<div class="app-icon">&nbsp;</div>
+		<div id="main-image"></div>
 		<div id="content-container">
-			<div class="app-title text-bold">Easily Find and share Device Info</div>
-			<div class="card-title text-light">Branch - Device ID Finder</div>
-			<div class="app-content text-light">An ideal tool for developers, customer support and marketing professionals to quickly copy and share the ID of your mobile device</div>
-		</div>
-		<div class="input-wrapper">
+			<div class="app-title bold">Easily Find and share Device Info</div>
+			<div class="card-title light">Branch - Device ID Finder</div>
+			<div class="app-content light">An ideal tool for developers, customer support and marketing professionals to quickly copy and share the ID of your mobile device</div>
 			<div class="input-container">
-				<form class="form-get-the-app">
-					<div class="app-icon">&nbsp;</div>
-					<a href="https://deviceidfinder.app.link/kScUDgC2Jdb"
-						class="cta-button text-light cta-button--no-app-icon">Get The App</a>
-				</form>
+				<div class="input-label light">Scan the QR Code to download the app</div>
+				<img src="https://cdn.branch.io/branch-assets/1612892980679-og_image.jpeg" height="100">
 			</div>
 		</div>
 	</div>
@@ -278,5 +159,5 @@
 			}
 		);
 	</script>
-</body>
+	<body>
 </html>
