--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<meta property="al:ios:url" content="bncdeviceid://home" />
+	<meta property="al:android:url" content="bncdeviceid://home" />
+
 <head>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
