--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<meta property="al:ios:url" content="bncdeviceid://home" />
 	<meta property="al:android:url" content="bncdeviceid://home" />
+	<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
+<meta property="og:image" content="ic_launcher.png"/>
 
 <head>
 	<!-- Google Tag Manager -->
