--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta property="og:type" content="website"/>
 <meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
 <meta property="og:image" content="ic_launcher.png"/>
+<meta property= "fb:app_id" content="2893625137630351"/>
 
 <head>
 	<!-- Google Tag Manager -->
