--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
 <meta property="og:image" content="ic_launcher.png"/>
 <meta property= "fb:app_id" content="2893625137630351"/>
+<meta property="og:title" content="Branch Device ID Finder"/>
 
 <head>
 	<!-- Google Tag Manager -->
