--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 	
 
 <head>
-	<meta property="al:ios:url" content="bncdeviceid://home" />
-	<meta property="al:android:url" content="bncdeviceid://home" />
 	<meta property="og:type" content="website"/>
+	<meta property="og:title" content="Branch Device ID Finder"/>
 <meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
 <meta property="og:image" content="ic_launcher.png"/>
 <meta property= "fb:app_id" content="2893625137630351"/>
-<meta property="og:title" content="Branch Device ID Finder"/>
+<meta property= "og:image" content="Get your device ID"/>
+<meta property="al:ios:url" content="bncdeviceid://home" />
+	<meta property="al:android:url" content="bncdeviceid://home" />
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
