--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta property="og:type" content="website"/>
 	<meta property="og:title" content="Branch Device ID Finder"/>
 <meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
-<meta property="og:image" content="ic_launcher.png"/>
+<meta property="og:image" content="https://github.com/deviceIDFinder/app/blob/main/ic_launcher.png"/>
 <meta property= "fb:app_id" content="2893625137630351"/>
 <meta property= "og:image" content="Get your device ID"/>
 <meta property="al:ios:url" content="bncdeviceid://home" />
