--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<meta property="og:type" content="website"/>
 	<meta property="og:title" content="Branch Device ID Finder"/>
 <meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
-<meta property="og:image" content="https://github.com/deviceIDFinder/app/blob/main/ic_launcher.png"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/deviceIDFinder/app/main/ic_launcher.png"/>
+<meta property= "og:description" content="Get your device ID"/>
+
 <meta property= "fb:app_id" content="2893625137630351"/>
-<meta property= "og:image" content="Get your device ID"/>
+
 <meta property="al:ios:url" content="bncdeviceid://home" />
 	<meta property="al:android:url" content="bncdeviceid://home" />
 
