--- a/mweb.html
+++ b/mweb.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta property="al:ios:url" content="bncdeviceid://home" />
-	<meta property="al:android:url" content="bncdeviceid://home" />
+	
 	<meta property="og:type" content="website"/>
+	<meta property="og:title" content="Branch Device ID Finder"/>
 <meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
-<meta property="og:image" content="ic_launcher.png"/>
+<meta property="og:image" content="https://raw.githubusercontent.com/deviceIDFinder/app/main/ic_launcher.png"/>
+<meta property= "og:description" content="Get your device ID"/>
+
 <meta property= "fb:app_id" content="2893625137630351"/>
+
+<meta property="al:ios:url" content="bncdeviceid://home" />
+	<meta property="al:android:url" content="bncdeviceid://home" />
+
 	<script>
 	(function(b,r,a,n,c,h,_,s,d,k){if(!b[n]||!b[n]._q){for(;s<_.length;)c(h,_[s++]);d=r.createElement(a);d.async=1;d.src="https://cdn.branch.io/branch-latest.min.js";k=r.getElementsByTagName(a)[0];k.parentNode.insertBefore(d,k);b[n]=h}})(window,document,"script","branch",function(b,r){b[r]=function(){b._q.push([r,arguments])}},{_q:[],_v:1},"addListener applyCode autoAppIndex banner closeBanner closeJourney creditHistory credits data deepview deepviewCta first getCode init link logout redeem referrals removeListener sendSMS setBranchViewData setIdentity track validateCode trackCommerceEvent logEvent disableTracking".split(" "), 0);
 	branch.init('key_live_lmJDv2hI9NuyiSzLNO3UVfmpCAk13Cbt');
