--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <meta property= "fb:app_id" content="2893625137630351"/>
 
-<meta property="al:ios:url" content="bncdeviceid://home" />
-	<meta property="al:android:url" content="bncdeviceid://home" />
+<meta property="al:ios:url" content="bncdeviceid://" />
+	<meta property="al:android:url" content="bncdeviceid://" />
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
