--- a/mweb.html
+++ b/mweb.html
@@ -294,7 +294,7 @@
 					
 							<div class="app-icon">&nbsp;</div>
 						
-					<a href="https://deviceidfinder.app.link/kScUDgC2Jdb" class="cta-button text-light">Get The App</a>
+					<a href="https://getdeviceid.app.link/e/app" class="cta-button text-light">Get The App</a>
 				</form>
 			</div>
 		</div>
