--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 <head>
 	<meta property="og:type" content="website"/>
 	<meta property="og:title" content="Branch Device ID Finder"/>
-<meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
-<meta property="og:image" content=https://cdn.branch.io/branch-assets/1612892980679-og_image.jpeg/>
-<meta property= "og:description" content="Get your device ID"/>
-
-<meta property= "fb:app_id" content="2893625137630351"/>
-
-<meta property="al:ios:url" content="bncdeviceid://" />
+	<meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
+	<meta property="og:image" content=https://cdn.branch.io/branch-assets/1612892980679-og_image.jpeg/>
+	<meta property= "og:description" content="Get your device ID"/>
+	<meta property= "fb:app_id" content="2893625137630351"/>
+	<meta property="al:ios:url" content="bncdeviceid://" />
 	<meta property="al:android:url" content="bncdeviceid://" />
+	
+	<title>Branch Device ID Finder</title>
+	<link rel="icon" href="https://deviceidfinder.github.io/app/ic_launcher.png">
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
