--- a/mweb.html
+++ b/mweb.html
@@ -11,7 +11,7 @@
 	<meta property="al:ios:url" content="bncdeviceid://" />
 	<meta property="al:android:url" content="bncdeviceid://" />
 	
-	<title>Device ID Finder</title>
+	<title>Branch Device ID Finder</title>
 	<link rel="icon" href="https://deviceidfinder.github.io/app/ic_launcher.png">
 
 	<script>
