--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
 	<meta property= "fb:app_id" content="2893625137630351"/>
 	<meta property="al:ios:url" content="bncdeviceid://" />
 	<meta property="al:android:url" content="bncdeviceid://" />
+	<!-- Snap Pixel Code -->
+<script type='text/javascript'>
+	(function(e,t,n){if(e.snaptr)return;var a=e.snaptr=function()
+	{a.handleRequest?a.handleRequest.apply(a,arguments):a.queue.push(arguments)};
+	a.queue=[];var s='script';r=t.createElement(s);r.async=!0;
+	r.src=n;var u=t.getElementsByTagName(s)[0];
+	u.parentNode.insertBefore(r,u);})(window,document,
+	'https://sc-static.net/scevent.min.js');
 	
+	snaptr('init', '87216ec4-f9a2-42ae-8147-0e4df333c206', {
+	'user_email': '__INSERT_USER_EMAIL__'
+	});
+	
+	snaptr('track', 'PAGE_VIEW');
+	
+	</script>
+	<!-- End Snap Pixel Code -->
 	<link id="seoCanonicalUrl" rel="canonical" href="https://deviceidfinder.com/"/>
 		
 	<title>Branch Device ID Finder</title>
