--- a/mweb.html
+++ b/mweb.html
@@ -6,7 +6,7 @@
 	<meta property="og:title" content="Branch Device ID Finder"/>
 	<meta property="og:url" content="https://deviceidfinder.github.io/app/"/>
 	<meta property="og:image" content=https://cdn.branch.io/branch-assets/1612892980679-og_image.jpeg/>
-	<meta property= "og:description" content="Get your device ID"/
+	<meta property= "og:description" content="Get your device ID"/>
 	<meta property= "fb:app_id" content="2893625137630351"/>
 	<meta property="al:ios:url" content="bncdeviceid://" />
 	<meta property="al:android:url" content="bncdeviceid://" />
